--- a/src/main/resources/fxml/UserForm.fxml
+++ b/src/main/resources/fxml/UserForm.fxml
@@ -22,6 +22,9 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Email:" />
@@ -32,12 +35,12 @@
             <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Role:" GridPane.rowIndex="3" />
             <ComboBox fx:id="roleComboBox" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-             <Label text="First Name:" GridPane.rowIndex="4" />
-             <TextField fx:id="firstNameField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-             <Label text="Last Name:" GridPane.rowIndex="5" />
-             <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-             <Label text="Phone:" GridPane.rowIndex="6" />
-             <TextField fx:id="phoneField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label fx:id="firstNameLabel" text="First Name:" GridPane.rowIndex="4" />
+            <TextField fx:id="firstNameField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label fx:id="lastNameLabel" text="Last Name:" GridPane.rowIndex="5" />
+            <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="phoneLabel" text="Phone:" GridPane.rowIndex="6" />
+            <TextField fx:id="phoneField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <HBox alignment="CENTER" spacing="10.0">
